[package]
name = "jyd2d"
version = "0.1.2"
authors = ["Joost Yervante Damad <joost@damad.be>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/andete/jyd2d"
description = "simple data structures for drawing 2d plans"

[dependencies]
assert_approx_eq = "1.1"
simple_xml_serialize = "0.2"